--- a/SimpleFacebookRegistrationHandler.cls
+++ b/SimpleFacebookRegistrationHandler.cls
@@ -1,7 +1,7 @@
 /**
   FaceBook Registration Handler example
 **/
-global class SimpleFacebookRegistrationHandler implements Auth.RegistrationHandler{
+global class SimpleFacebookRegistrationHandler implements Auth.RegistrationHandler, Auth.ConfigurableSelfRegHandler{
     
     private static final String ORG_SUFFIX = '.sso.badge.org';
     private static final String DEFAULT_ACCOUNTNAME = 'Customers';
